$Id$
Version 1.1.2 (?? ??? 2006)
 - Fix bug [ 1612985 ] new installation get an error using the installation-wizard
 - Fix bug [ 1612973 ] error during using 'update_translation.pl'
 - Implemented PATCH [ 1611288 ] Japanese translation updated
 - Added translate() to some phrases in dbi4php.php.
 - Implemented PATCH [ 1503321 ] Modify dbi4php.php to enable concurrent MySQL connections
 - Implemented PATCH [ 1436533 ] Case insensitive sorting from LDAP users
 - Fixed bug [ 1610829 ] view_entry.php and postgres issue
 - Fixed bug [ 1605992 ] matrix-grid-thickness not correct displayed for IE
 - Fixed bug [ 1607264 ] login problem for non-admin user v1.1.2
 - Impemented PATCH [ 1562620 ] Date Range Search
 - Impemented RFE [ 903167 ] Advanced Search by Category/Date Range
 - Fixed bug [ 1608335 ] incomplete display of access.php (using UAC)
 - Fixed bug [ 1607603 ] Display description in printer day view no longer works
 - Fixed bug [ 1608365 ] default category should be suggested if adding any entries
 - Fixed bug [ 1608533 ] unable to use 'System Log' if not using 'top-menue'
 - Finished fixing bug [ 1600208 ] send_reminders.php and postgresql
 - Implemented RFE [ 1502773 ] Creator emails requested
 - Implemented RFE [ 1097294 ] Allow 'site_extra' fields to be included in emails
 - Implemented RFE [ 886520 ] Support for multiple selections in site_extras
 - Implemented RFE [ 1561653 ] Only a few site extras in the popup
 - Implemented RFE [ 1603169 ] Add checkbox option to site_extras
 - Fixed bug [ 1603599 ] color of definied-global-category will not be displayed as
 - Fixed bug [ 1601664 ] Spurious scheduling conflict
 - Fixed bug [ 1603582 ] bug at 'help_bug.php' missing language
 - Fixed bug [ 1603583 ] 'credits' at 'about.php' didn't work
 - Fixed bug [ 1603594 ] missing button label for choosing color at 'categories'
 - Made Priority conform to RFC2445 1-9 scale 1-highest, 9=lowest